# CW2_ML

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: typiclust_modified.ipynb  typiclust_original.ipynb
report/: README.md  generated_conclusion_text.tex  generated_methodology_text.tex  generated_notebook_appendix.tex  generated_results_rows.tex  generated_results_text.tex  generated_stats_text.tex  main.tex  references.bib
scripts/: build_appendix_notebooks.py  fill_report_from_outputs.py  generate_report_artifacts.py  run_colab.sh  run_local_gpu.sh  run_two_stage_final.sh  run_uncertainty_hybrid_screen.sh  tune_typiclust_adaptive.py
src/cw2_ml/: __init__.py  config.py
src/cw2_ml/al/: __init__.py  modified.py  typiclust.py
src/cw2_ml/data/: __init__.py  cifar10.py
src/cw2_ml/experiments/: __init__.py  run_active_learning.py
src/cw2_ml/models/: __init__.py  resnet.py
src/cw2_ml/reporting/: __init__.py  analysis.py  plots.py
src/cw2_ml/train/: __init__.py  contrastive.py  supervised.py
src/cw2_ml/utils/: __init__.py  io.py
tests/: conftest.py  test_analysis.py  test_appendix_notebooks.py  test_cifar10_data.py  test_config.py  test_contrastive.py  test_pipeline_smoke.py  test_readme.py  test_report_artifacts.py  test_report_completion.py  test_report_template.py  test_tune_typiclust_adaptive.py  test_typiclust.py
